[tool.poetry]
name = "pyrollup"
packages = [{include = "pyrollup"}]
version = "0.1.0"
description = "Simple mechanism to rollup API symbols to a Python module from its submodules"
authors = ["mm21 <mm21.apps@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
